--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "pinia": "^2.1.7",
+    "toastr": "^2.1.4",
     "vue": "^3.4.19"
   },
   "devDependencies": {
