--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.4.19"
   },
   "devDependencies": {
+    "@types/toastr": "^2.1.43",
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
