--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "moment": "^2.30.1",
+    "momentjs": "^2.0.0",
     "pinia": "^2.1.7",
     "toastr": "^2.1.4",
     "vue": "^3.4.19"
