--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.4.19"
   },
   "devDependencies": {
+    "@types/node": "^22.0.0",
     "@types/toastr": "^2.1.43",
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.77.8",
